# avr-command-verification

./: .gitignore  README.md
daemon/: CMakeLists.txt  main.cpp  rest-validation.cpp  rest-validation.h  serial-port.cpp  serial-port.h
mote/: mote.ino
verification-service/: CMakeLists.txt  main.cpp  verification-server.sh  whitelist.conf
